--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,6 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Feniks Dance Show
+email: yuri.malakhov87@gmail.com
+description: ""
 baseurl: ""
-url: "http://yurimalakhov.github.io/"
-twitter_username: jekyllrb
-github_username:  jekyll
-
-# Build settings
-markdown: kramdown
+url: "http://feniks-dance.ru/"
