--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: Feniks Dance Show
 email: yuri.malakhov87@gmail.com
 description: ""
 baseurl: ""
-url: "http://feniks-dance.ru/"
+url: "https://feniks-dance.github.io"
